# SellerPredictAI

./: .gitignore  CLAUDE.md  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
config/: weights.json
data/sample/: distress_signals.csv  equity_profiles.csv  probate_filings.csv  properties.csv  tax_records.csv  vacancy_indicators.csv
src/: cli.py
src/api/: app.py  dashboard.py  schemas.py
src/data/: __init__.py  feature_builder.py  schema.py
src/db/: __init__.py  models.py  repository.py  session.py
src/engine/: __init__.py  lead_generator.py
src/ingest/: csv_loader.py
src/models/: __init__.py  predictor.py
src/training/: __init__.py  data_generator.py
tests/: test_api.py  test_csv_loader.py  test_db.py  test_pipeline.py
